--- a/first_django_app/chat/templates/auth/login.html
+++ b/first_django_app/chat/templates/auth/login.html
@@ -16,5 +16,6 @@
     <div> <input name="username" type="text"></div>
     <div> <input name="password" type="password"></div>
     <div> <button> Login </button></div>
+    <a href="/register/">Noch nicht registriert?</a>
 </form>
 {% endblock %}
