--- a/first_django_app/chat/templates/chat/index.html
+++ b/first_django_app/chat/templates/chat/index.html
@@ -3,16 +3,33 @@
 {% if request.user.is_authenticated %}
 {% for message in messages %}
 
+<script>
+    async function sendMessage() {
+        let fd = new FormData();
+        let token = '{{ csrf_token }}'
+        fd.append('textmessage', messageField.value);
+        fd.append('csrfmiddlewaretoken', token)
+        try {
+            await fetch('/chat/', {
+                method: 'POST',
+                body: fd
+            });
+            console.log('Sucess')
+        } catch (e) {
+            console.error('An error occured', e)
+        }
+    }
+</script>
 <div>
     <span class="color_gray"> {{ message.created_at }} </span> {{ message.author }} :<i> {{ message.text }}</i>
 </div>
 {% endfor %}
 <!-- Your content goes here -->
-<form action="/chat/" method="post">
+<form method="post" onsubmit="sendMessage(); return false;">
     {% csrf_token %}
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <input class="mdl-textfield__input" name="textmessage" type="text" id="sample3">
-        <label class="mdl-textfield__label" for="sample3">Text...</label>
+        <input class="mdl-textfield__input" name="textmessage" type="text" id="messageField">
+        <label class="mdl-textfield__label" for="messageField">Text...</label>
     </div>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
         Senden
@@ -26,6 +43,6 @@
 <h1>Nicht eingeloggt</h1>
 <p> Bitte einloggen</p>
 <a href="/login/">Einloggen</a>
-
+<a href="/register/">Noch nicht registriert?</a>
 {% endif %}
 {% endblock %}
