--- a/first_django_app/chat/templates/chat/index.html
+++ b/first_django_app/chat/templates/chat/index.html
@@ -1,29 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
 {% if request.user.is_authenticated %}
-{% for message in messages %}
+<div id="messageContainer">
+    {% for message in messages %}
 
+
+
+    <div>
+        <span class="color_gray"> {{ message.created_at }} </span> {{ message.author }} :<i> {{ message.text }}</i>
+    </div>
+    {% endfor %}
+</div>
 <script>
     async function sendMessage() {
         let fd = new FormData();
         let token = '{{ csrf_token }}'
         fd.append('textmessage', messageField.value);
         fd.append('csrfmiddlewaretoken', token)
+        
         try {
+            messageContainer.innerHtml += `
+            <div>
+                <span class="color_gray"> [DATUM] </span> MEIN NAME :<i class="color_gray"> ${messageField.value}</i>
+            </div>`;
+
             await fetch('/chat/', {
                 method: 'POST',
                 body: fd
             });
-            console.log('Sucess')
+
+            console.log('gg')
         } catch (e) {
             console.error('An error occured', e)
         }
     }
 </script>
-<div>
-    <span class="color_gray"> {{ message.created_at }} </span> {{ message.author }} :<i> {{ message.text }}</i>
-</div>
-{% endfor %}
+
 <!-- Your content goes here -->
 <form method="post" onsubmit="sendMessage(); return false;">
     {% csrf_token %}
