--- a/first_django_app/chat/templates/chat/index.html
+++ b/first_django_app/chat/templates/chat/index.html
@@ -1,42 +1,52 @@
 {% extends "base.html" %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<div id="messageContainer">
+
+<div id="abcdefg">
     {% for message in messages %}
 
 
-
     <div>
-        <span class="color_gray"> {{ message.created_at }} </span> {{ message.author }} :<i> {{ message.text }}</i>
+        <span class="color_gray"> [{{ message.created_at }}] </span> {{ message.author }} :<i> {{ message.text }}</i>
     </div>
+
     {% endfor %}
+
 </div>
+
 <script>
     async function sendMessage() {
         let fd = new FormData();
-        let token = '{{ csrf_token }}'
+        let token = '{{ csrf_token }}';
         fd.append('textmessage', messageField.value);
-        fd.append('csrfmiddlewaretoken', token)
-        
+        fd.append('csrfmiddlewaretoken', token);
         try {
-            messageContainer.innerHtml += `
-            <div>
-                <span class="color_gray"> [DATUM] </span> MEIN NAME :<i class="color_gray"> ${messageField.value}</i>
-            </div>`;
-
-            await fetch('/chat/', {
+            abcdefg.innerHTML += `
+            <div id="deleteMessage">
+                <span class="color_gray"> [DATUM] </span> {{request.user.auther}} :<i class="color_gray"> ${messageField.value}</i>
+            </div>
+            `;
+           let response = await fetch('/chat/', {
                 method: 'POST',
                 body: fd
             });
 
+            let json = await response.json();
+            console.log(json)
+document.getElementById('deleteMessage').remove()
             console.log('gg')
+            abcdefg.innerHTML += `
+            <div>
+                <span class="color_gray"> [aasd] </span> {{request.user.auther}} :<i> ${messageField.value}</i>
+            </div>
+            `;
         } catch (e) {
             console.error('An error occured', e)
         }
     }
 </script>
 
-<!-- Your content goes here -->
+
 <form method="post" onsubmit="sendMessage(); return false;">
     {% csrf_token %}
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
